style.css
/*############### SETUP ###############*/
html, body{height: 100%; width: 100vw;}
body{
    background-image: url("assets/war_bg.jpg");
    background-size: cover;
    margin: 0;
    padding: 0;
    font-family: "Roboto";
}

h1,h2{
    font-family: "Comfortaa";
    margin: 0;
}

#cover-bg{
    padding: 0;
    margin: 0;
    min-height: 100vh;
    width: 100vw;
    min-width: 100vw;
    background-color: rgba(255, 255, 255, 0.5);
}

h1{
    width: 100vw;
    padding-top: 2vh;
    text-align: center;
    color: darkmagenta;
    text-shadow: -2px -2px #fff, 2px -2px #fff, -2px 2px #fff, 2px 2px #fff;
}

#main{
    display: grid;
    width: 90vw;
    grid-template-columns: 45vw 45vw;
    grid-column-gap: 1vw;
    grid-row-gap: 1vh;
    grid-auto-rows: 50%;
    margin: 0 auto;
    margin-top: 4vh;
}

.main-col{

    border-radius: 5px;
    background-color: rgba(255, 255, 255, 0.5);
    min-height: 100vh;
    width: 100%;
    padding: 2vh;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
/*############### COLUMN CONTENT ###############*/
.col-head{
    width: 70%;
    margin: 0 auto;
    text-align: center;
    background-color: darkmagenta;
    color: white;
    border-radius: 20px;
    padding: 0.5vh 0 0.5vh 0;
    margin-bottom: 2vh;
}

.desc{
    padding: 2vh;
    font-size: 2vh;
}

.intro{
    display: grid;
    grid-template-columns: 80% 10% 10%;
    grid-column-gap: 1vw;
    padding: 0 4vw;
}


.btn-row{
    padding-top: 2vh;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 1vw;
}

.btn-fight{
    border: solid 3px darkslategrey;
    border-radius: 10px;
    text-align: center;
    color: darkslategrey;
    font-family: "Comfortaa";
    font-weight: 700;
    padding: 0.5vh;
    background-color: rgba(255, 255, 255, 0.8);
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
    transition: 0.2s;
}

.v_selected{
    background-color: darkslategrey;
    color: #fff;
}

.btn-fight:hover{
    background-color: darkslategrey;
    cursor: pointer;
    color: white;
    transition: 0.2s;
}

.btn-help{
    display: flex;
    justify-content: center;
    align-items: center;

}

.btn-circle{
    margin: 0 auto;
    border-radius: 100%;
    height: 40px;
    aspect-ratio: auto 1/1;
    font-size: 1.3em;
    text-align: center;
    color: #0091E7;
    font-weight: 900;
    background-color: #0091E7;
    color: white;
    transition: 0.2s;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;

}

.btn-circle:hover{
    cursor: pointer;
    background-color: #fff;
    color: #0091E7;
    transition: 0.2s;
}

#btn-circle-set{
    background: darkslategrey;
}
#btn-circle-set:hover{
    background: white;
    color: darkslategrey;
}


.desc-tbl{
    padding-top: 5vh;
    display:grid;
    grid-template-columns: 0.2fr 0.8fr;
    grid-column-gap: 2vw;
    grid-row-gap: 2vh;

    width: 100%;
    margin: 0;
}


.desc p{
    width: 100%;
    margin: 0;
}

.check{
    margin: 2vh 2vh 0 0;
    width: 2vw;
    transform: scale(2);
}



/*############### ATTACK ###############*/

input{
    background-color: transparent;
    border: none;
    border-bottom: darkslategrey 2px solid;
    text-align: center;
    font-size: 2em;
    width: 100%;
    font-family: "Comfortaa";
    color: darkslategrey;
    font-weight: 900;
}
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.attack{
    margin-top: 5vh;
    width: 100%;
    text-align: center;
}

.battle{
    padding: 1vw 3vw;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 1vw;
}

.battle-side{
    text-align: center;
}

.raise{
    display: grid;
    grid-template-columns: 2fr 6fr 2fr;
}

.change .btn-circle{
    background-color: darkslategrey;
}

.change .btn-circle:hover{
    background-color: darkgrey;
    color: darkslategrey;

}


.btn-confirm{
    margin-top: 1.5vw;
    padding: 1vh;
    grid-column: span 3;
    background-color: darkslategrey;
    text-align: center;
    font-family: "Comfortaa";
    font-weight: 900;
    color: #fff;
    border-radius: 10px;
    border: darkslategrey 3px solid;
    transition: 0.2s ease;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
}

.btn-confirm:hover{
    cursor: pointer;
    background-color: #fff;
    color: darkslategrey;
    transition: 0.2s ease;
}


/*############### RESULTS ###############*/

.results-header-wrap{
    width: 100%;
    margin-bottom: 1vh;
}
#results{
    border: darkmagenta 3px solid;
    width: 40%;
    text-align: center;
    margin: 0 auto;
    padding: 1vh;
    border-radius: 10px;
    color: darkmagenta;
}

.results-tbl{
    display: grid;
    width: 60%;
    grid-template-columns: 45% 45%;
    grid-column-gap: 10%;
    grid-row-gap: 2vh;
    margin: 0 auto;
    margin-top: 3vh;

}

.results-cell-head{
    position: relative;
}
.results-cell-head p{
    position: absolute;
    transform: rotate(-90deg);
    bottom: 13px;
    color: darkslategrey

}

#res-cell-A span{
    width: 100%;
    text-align: right;
    
}

#res-cell-A span{
    border-right: darkslategrey 2px solid;
    padding-right: 1vw;
}
#res-cell-D span{
    border-left: darkslategrey 2px solid;
    padding-left: 1vw;
}

.cell-head {
    color: darkslategrey;
    font-weight: 800;

}



.results-tbl p{margin: 0.5vh;}
.results-tbl span{display: block;}

#log{
    grid-column: span 2;
    border: darkslategrey 3px solid;
    border-radius: 10px;
    color: darkslategrey;
    font-family: "Comfortaa";
    text-align: center;
    transition: 0.2s ease;
    height: 3vh;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 
}

#log span{
    font-weight: 900;
    line-height: 3vh;
}




#log:hover{
    color: white;
    background-color: darkslategrey;
    transition: 0.2s ease;
    cursor: pointer;
}



/*############### LOGS ###############*/

#modal-log{
    overflow-y: scroll;
    height: 80vh;
}

#logs-tbl{
    padding: 0;
    padding-bottom: 3vh;
    grid-template-columns: 0.5fr 0.5fr;
}


.log-A-results, .log-D-results{
    width: 100%;
}
.pips-wrap{
    display:inline-block;
    margin-right: 0;
    margin-left: auto;
    width: 45%;
  
}
.pips-wrap-inner{
    float: right;
}

.log-res-inner{
    display: inline-block;
    margin: 0.2vw;
    width: 2vw;
    aspect-ratio: auto 1/1;
    border-radius: 5px;
    text-align: center;
    color: white;
    font-weight: 900;
    line-height: 2vw;
    margin-right: 1vw;

}

.A-inner{background: #ba040a;}
.D-inner{background: #1a65b0;}
.inner-grey{background: grey}

/*############### MODAL CONTENT ###############*/

.modal{
    position: fixed;
    z-index: 9998;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    display: flex;
    align-items: center;

}

.modal p{
    overflow-wrap: break-word;
}
.modal-body{
    background-color: #fff;
    padding: 3vh;
    border-radius: 10px;
    width: 50vw;
    margin: 0 auto;
    
    position: relative;
}

.close{
    position: absolute;
    top: 10px;
    right: 20px;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 900;
    font-size: 2em;
    transition: 0.2s ease;
}

.close:hover{
    color: darkmagenta;
    cursor: pointer;
    transition: 0.2s ease;
}







/*############### MEDIA QUERIES ###############*/



@media (max-width: 900px){
    #main{
        grid-template-columns: 1fr;
    }

    .main-col{height: 120vh;}

    .intro{
        grid-template-columns: 0.6fr 0.3fr 0.3fr;
    }
    .desc-tbl{
        grid-template-columns: 100%;
        grid-column-gap: 0vw;
        grid-row-gap: 2vh;
    }

    .modal{
        width: 100vw;
    }
    .modal-body{
        width: 70vw;
    }

    .results-tbl{width: 100%;}
    .check{

        transform: scale(3);
    }
}

@media (max-width: 1020px) {
    .battle{
        
        grid-template-columns: 100%;
        grid-row-gap: 2vh;

    }

    .battle-side{
        width: 100%;
    }

    .btn-confirm{
        grid-column: span 1;
    }
}

